BISMILLAH yaallah ci/cd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ env:
   SMTP_PORT: ${{ secrets.SMTP_PORT}}
   SMTP_USERNAME: ${{ secrets.SMTP_USERNAME}}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+  PORT: ${{ secrets.PORT }}
 
 
 jobs:
@@ -71,6 +72,7 @@ jobs:
             SMTP_USERNAME=${{ env.SMTP_USERNAME }}
             SMTP_PASSWORD=${{ env.SMTP_PASSWORD }}
             SECRET_KEY=${{ env.SECRET_KEY }}
+            PORT=${{ env.PORT }}
             
             
 
