--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,16 @@ env:
   GAR_REPOSITORY_NAME: ${{ secrets.GAR_REPOSITORY_NAME }}
   SERVICE: ${{ secrets.SERVICE }}
   REGION: ${{ secrets.REGION }}
-  SECRET_KEY : ${{ secrets.SECRET_KEY }}
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
   DB_HOST: ${{ secrets.DB_HOST }}
   DB_USERNAME: ${{ secrets.DB_USERNAME }}
   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
   DB_NAME: ${{ secrets.DB_NAME }}
   DB_PORT: ${{ secrets.DB_PORT }}
   SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-  SMTP_PORT: ${{ secrets.SMTP_PORT}}
-  SMTP_USERNAME: ${{ secrets.SMTP_USERNAME}}
+  SMTP_PORT: ${{ secrets.SMTP_PORT }}
+  SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-
 
 jobs:
   deploy:
@@ -28,7 +27,6 @@ jobs:
     permissions:
       contents: "read"
       id-token: "write"
-
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -59,7 +57,8 @@ jobs:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}
-          flags: --verbosity=debug --timeout=300
+          flags: --verbosity=debug
+          timeout: 30m  # Menambahkan opsi timeout 30 menit
           env_vars: |
             DB_HOST=${{ env.DB_HOST }}
             DB_USERNAME=${{ env.DB_USERNAME }}
@@ -71,15 +70,6 @@ jobs:
             SMTP_USERNAME=${{ env.SMTP_USERNAME }}
             SMTP_PASSWORD=${{ env.SMTP_PASSWORD }}
             SECRET_KEY=${{ env.SECRET_KEY }}
-          startup_probe:
-            initial_delay_seconds: 15
-            timeout_seconds: 5
-            period_seconds: 5
-            failure_threshold: 30
-          liveness_probe:
-            timeout_seconds: 5
-            period_seconds: 10
-            failure_threshold: 3
 
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
