--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ env:
   SMTP_PORT: ${{ secrets.SMTP_PORT }}
   SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+  SERVER_PORT: "8080"  # Explicitly define SERVER_PORT
 
 jobs:
   deploy:
@@ -68,6 +69,7 @@ jobs:
             SMTP_USERNAME=${{ env.SMTP_USERNAME }}
             SMTP_PASSWORD=${{ env.SMTP_PASSWORD }}
             SECRET_KEY=${{ env.SECRET_KEY }}
+            SERVER_PORT=${{ env.SERVER_PORT }}  # Ensure SERVER_PORT is passed to the container
 
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
