--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ env:
   SMTP_PORT: ${{ secrets.SMTP_PORT }}
   SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-  SERVER_PORT: "8080"
+  SERVER_PORT: "8080"  # Explicitly define SERVER_PORT
 
 jobs:
   deploy:
@@ -39,12 +39,13 @@ jobs:
         with:
           credentials_json: "${{ secrets.SERVICE_ACCOUNT }}"
 
+      # Authenticate Docker to Google Cloud Artifact Registry
       - name: Configure Docker to use gcloud
-        run: |
+        run: |-
           gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
       - name: Build and Push Container
-        run: |
+        run: |-
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
 
@@ -55,19 +56,20 @@ jobs:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}
-          flags: --verbosity=debug --startup-probe-timeout=600
-
-      - name: Configure Cloud Run Environment Variables
-        run: |
-          gcloud run services update ${{ env.SERVICE }} \
-            --region ${{ env.REGION }} \
-            --set-env-vars "DB_HOST=${{ env.DB_HOST }},DB_USERNAME=${{ env.DB_USERNAME }},DB_PASSWORD=${{ env.DB_PASSWORD }},DB_NAME=${{ env.DB_NAME }},DB_PORT=${{ env.DB_PORT }},SMTP_SERVER=${{ env.SMTP_SERVER }},SMTP_PORT=${{ env.SMTP_PORT }},SMTP_USERNAME=${{ env.SMTP_USERNAME }},SMTP_PASSWORD=${{ env.SMTP_PASSWORD }},SECRET_KEY=${{ env.SECRET_KEY }},SERVER_PORT=${{ env.SERVER_PORT }}"
-
-      - name: Set Cloud Run Timeout
-        run: |
-          gcloud run services update ${{ env.SERVICE }} \
-            --region ${{ env.REGION }} \
-            --timeout=300s
+          flags: --verbosity=debug --startup-probe-timeout=600s --request-timeout=600s
+          timeout: 30m
+          env_vars: |
+            DB_HOST=${{ env.DB_HOST }}
+            DB_USERNAME=${{ env.DB_USERNAME }}
+            DB_PASSWORD=${{ env.DB_PASSWORD }}
+            DB_NAME=${{ env.DB_NAME }}
+            DB_PORT=${{ env.DB_PORT }}
+            SMTP_SERVER=${{ env.SMTP_SERVER }}
+            SMTP_PORT=${{ env.SMTP_PORT }}
+            SMTP_USERNAME=${{ env.SMTP_USERNAME }}
+            SMTP_PASSWORD=${{ env.SMTP_PASSWORD }}
+            SECRET_KEY=${{ env.SECRET_KEY }}
+            SERVER_PORT=${{ env.SERVER_PORT }}  # Ensure SERVER_PORT is passed to the container
 
       - name: Show Output
         run: echo ${{ steps.deploy.outputs.url }}
