--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ env:
   PROJECT_ID: ${{ secrets.PROJECT_ID }}
   GAR_LOCATION: ${{ secrets.GAR_LOCATION }}
   GAR_REPOSITORY_NAME: ${{ secrets.GAR_REPOSITORY_NAME }}
+  PORT: ${{ secrets.PORT }}
   SERVICE: ${{ secrets.SERVICE }}
   REGION: ${{ secrets.REGION }}
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
@@ -20,7 +21,6 @@ env:
   SMTP_PORT: ${{ secrets.SMTP_PORT }}
   SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-  SERVER_PORT: "8080"  # Explicitly define SERVER_PORT
 
 jobs:
   deploy:
@@ -59,6 +59,7 @@ jobs:
           flags: --verbosity=debug
           timeout: 600s
           env_vars: |
+            PORT=${{ env.PORT }}
             DB_HOST=${{ env.DB_HOST }}
             DB_USERNAME=${{ env.DB_USERNAME }}
             DB_PASSWORD=${{ env.DB_PASSWORD }}
