--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,76 +1,52 @@
-name: Build and Deploy
+name: backend-hr-harmony
 
 on:
   push:
-    branches: ["main"]
-
-env:
-  PROJECT_ID: ${{ secrets.PROJECT_ID }}
-  GAR_LOCATION: ${{ secrets.GAR_LOCATION }}
-  GAR_REPOSITORY_NAME: ${{ secrets.GAR_REPOSITORY_NAME }}
-  PORT: ${{ secrets.PORT }}
-  SERVICE: ${{ secrets.SERVICE }}
-  REGION: ${{ secrets.REGION }}
-  SECRET_KEY: ${{ secrets.SECRET_KEY }}
-  DB_HOST: ${{ secrets.DB_HOST }}
-  DB_USERNAME: ${{ secrets.DB_USERNAME }}
-  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-  DB_NAME: ${{ secrets.DB_NAME }}
-  DB_PORT: ${{ secrets.DB_PORT }}
-  SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-  SMTP_PORT: ${{ secrets.SMTP_PORT }}
-  SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
-  SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+    branches:
+      - main
 
 jobs:
-  deploy:
-    timeout-minutes: 30
-    permissions:
-      contents: "read"
-      id-token: "write"
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Google Auth
-        id: auth
-        uses: "google-github-actions/auth@v2"
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          credentials_json: "${{ secrets.SERVICE_ACCOUNT }}"
-
-      # Authenticate Docker to Google Cloud Artifact Registry
-      - name: Configure Docker to use gcloud
-        run: |-
-          gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
-
-      - name: Build and Push Container
-        run: |-
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
-
-      - name: Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@v2
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
         with:
-          service: ${{ env.SERVICE }}
-          region: ${{ env.REGION }}
-          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY_NAME }}/${{ env.SERVICE }}:${{ github.sha }}
-          flags: --verbosity=debug
-          timeout: 600s
-          env_vars: |
-            PORT=${{ env.PORT }}
-            DB_HOST=${{ env.DB_HOST }}
-            DB_USERNAME=${{ env.DB_USERNAME }}
-            DB_PASSWORD=${{ env.DB_PASSWORD }}
-            DB_NAME=${{ env.DB_NAME }}
-            DB_PORT=${{ env.DB_PORT }}
-            SMTP_SERVER=${{ env.SMTP_SERVER }}
-            SMTP_PORT=${{ env.SMTP_PORT }}
-            SMTP_USERNAME=${{ env.SMTP_USERNAME }}
-            SMTP_PASSWORD=${{ env.SMTP_PASSWORD }}
-            SECRET_KEY=${{ env.SECRET_KEY }}
-            SERVER_PORT=${{ env.SERVER_PORT }}  # Ensure SERVER_PORT is passed to the container
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
 
-      - name: Show Output
-        run: echo ${{ steps.deploy.outputs.url }}
+  deploy-rest-api:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - name: Connect to server using SSH
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            sudo docker stop destimate
+            sudo docker rm destimate
+            sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
+            sudo docker run -d -p 8080:8080  -e DB_USERNAME=${{ secrets.DB_USERNAME }} -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} -e DB_HOST=${{ secrets.DB_HOST }} -e DB_PORT=${{ secrets.DB_PORT }} -e DB_NAME=${{ secrets.DB_NAME }} -e SECRET_KEY=${{ secrets.SECRET_KEY }} -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} -e SMTP_USERNAME=${{ secrets.SMTP_USERNAME }} -e SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }} -e SMTP_PORT=${{ secrets.SMTP_PORT }} --name destimate ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
