--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            sudo docker stop destimate
-            sudo docker rm destimate
+            sudo docker stop hr-harmony
+            sudo docker rm hr-harmony
             sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
             sudo docker run -d -p 8080:8080  -e DB_USERNAME=${{ secrets.DB_USERNAME }} -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} -e DB_HOST=${{ secrets.DB_HOST }} -e DB_PORT=${{ secrets.DB_PORT }} -e DB_NAME=${{ secrets.DB_NAME }} -e SECRET_KEY=${{ secrets.SECRET_KEY }} -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} -e SMTP_USERNAME=${{ secrets.SMTP_USERNAME }} -e SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }} -e SMTP_PORT=${{ secrets.SMTP_PORT }} --name destimate ${{ secrets.DOCKERHUB_USERNAME }}/backend-hr-harmony:latest
